# AutoTestGenX

./: .gitignore  README.md  pyproject.toml  run_experiments.py
Test Generation/: .env.example  .gitignore  README.md  methodology.tex  pyproject.toml
Test Generation/agent_logs/.checkpoints/: test_generation.sqlite  testdataset-20260619-012133-903641.json
Test Generation/agent_logs/test_generation/Testdataset/openai-gpt-5-mini/: Testdataset-openai-gpt-5-mini-critique.md  Testdataset-openai-gpt-5-mini-workflow-validator-critique.md  structural-model.json  (+4 more)
Test Generation/baselines/few_shot/: Mifos_few_shot.md  MoodleStudent_few_shot.md  MoodleTeacher_few_shot.md  PHPTravels_few_shot.md  Parabank_few_shot.md  SwagLab_few_shot.md
Test Generation/baselines/zero_shot/: prompt.md
Test Generation/dataset/ground_truth/: MoodleStudent.md  MoodleTeacher.md  Parabank.md
Test Generation/dataset/raw_specifications/Moodle/: MoodleMerged.md
Test Generation/dataset/raw_specifications/SwagLab/: SwagLab.md
Test Generation/docs/: agents.md  architecture.md  data_models.md  pipeline.md
Test Generation/results/Testdataset/openai-gpt-5-mini/: Testdataset-tests.md
Test Generation/skillls/: test_generation_scope.md
Test Generation/test_generation/: __init__.py  __main__.py  cli.py
Test Generation/test_generation/framework/: __init__.py
Test Generation/test_generation/framework/agents/: __init__.py  base.py  edge_test_case_generator.py  negative_test_case_generator.py  positive_test_case_generator.py  structural_model_generator.py  structural_model_validator.py  utils.py  workflow_extractor.py  workflow_validator.py
Test Generation/test_generation/framework/orchestrator/: __init__.py  generator.py  graph.py  nodes.py  runs.py  state.py
Test Generation/test_generation/prompts/: edge_test_case_generator.md  positive_test_case_generator.md  structural_model_generator.md  structural_model_validator.md  workflow_extractor.md  workflow_validator.md
(+321 files in other folders)
