[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "test_generation"
version = "3.0.0"
description = "Automated test case generation from functional specifications using multi-agent orchestration."
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "litellm>=1.50",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "litellm>=1.50",
]

[project.scripts]
test-generation = "test_generation.cli:main"

[tool.setuptools]
packages = [
    "test_generation",
    "test_generation.prompts",
    "test_generation.framework",
    "test_generation.framework.orchestrator",
    "test_generation.framework.agents",
]

[tool.setuptools.package-dir]
test_generation = "test_generation"

[tool.setuptools.package-data]
"test_generation.prompts" = ["*.md"]
